--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
 	"description": "Never miss a thing in Life. Take notes quickly. Organize and keep track of all your notes.",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server",
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "nodemon server"
 	},
 	"keywords": [
 		"Express",
