--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"cors": "^2.8.5",
 		"express": "^4.16.3",
 		"firebase-admin": "^9.4.2",
+		"moment": "^2.29.1",
 		"mongoose": "^5.2.8"
 	},
 	"devDependencies": {
