--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"express": "^4.16.3",
 		"firebase-admin": "^9.4.2",
 		"moment": "^2.29.1",
-		"mongoose": "^5.2.8"
+		"mongoose": "^5.2.8",
+		"short-uuid": "^4.1.0"
 	},
 	"devDependencies": {
 		"nodemon": "^1.19.4"
